-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.18.0
-
None
-
3
-
9223372036854775807
This issue was created by maloo for jianyu <yujian@whamcloud.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/49a80893-9ad9-4ec3-965f-20418946b434
test_100 failed with the following error:
mount lustre on /mnt/lustre..... Starting client: trevis-154vm42.trevis.whamcloud.com: -o user_xattr,flock 10.240.39.202@tcp:/lustre /mnt/lustre CMD: trevis-154vm42.trevis.whamcloud.com mkdir -p /mnt/lustre CMD: trevis-154vm42.trevis.whamcloud.com mount -t lustre -o user_xattr,flock 10.240.39.202@tcp:/lustre /mnt/lustre CMD: trevis-154vm42.trevis.whamcloud.com cp /etc/passwd /mnt/lustre/a CMD: trevis-154vm42.trevis.whamcloud.com rm /mnt/lustre/a CMD: trevis-154vm42.trevis.whamcloud.com grep /mnt/lustre' ' /proc/mounts > /dev/null setup single mount lustre success CMD: trevis-154vm45 lshowmount -v trevis-154vm45: *** buffer overflow detected ***: terminated trevis-154vm45: bash: line 1: 1439433 Aborted (core dumped) ( PATH=$PATH:/usr/lib64/lustre/utils:/usr/lib64/lustre/tests:/sbin:/usr/sbin; cd /usr/lib64/lustre/tests; LUSTRE="/usr/lib64/lustre" bash -c "lshowmount -v" ) pdsh@trevis-154vm42: trevis-154vm45: ssh exited with exit code 134 conf-sanity test_100: @@@@@@ FAIL: lshowmount have no output MGS
Test session details:
clients: https://build.whamcloud.com/job/lustre-master/4701 - 6.12.0-55.43.1.el10_0.x86_64
servers: https://build.whamcloud.com/job/lustre-master/4701 - 6.12.0-55.43.1_lustre.el10.x86_64
<<Please provide additional information about the failure here>>
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
conf-sanity test_100 - lshowmount have no output MGS