LU-19886 utils: fix buffer overflow in lshowmount nidlist

nl_strxcat() passes max_len (total buffer size) as the size
argument to the first snprintf() call, but the write position
is s + strlen(s), so the available space is only
max_len - strlen(s). With FORTIFY_SOURCE=3 (default on el10),
glibc detects that the size argument exceeds the remaining
object size and aborts with "buffer overflow detected".

Similarly, nl_xstring() passes len (total buffer size) as the
count argument to strncat(), which should be the maximum number
of characters to append, not the total buffer size. The correct
value is len - strlen(s) - 1 (remaining space minus null
terminator).

Fix all four instances to use the remaining buffer space rather
than the total allocation size.

Test-Parameters: trivial testlist=conf-sanity env=ONLY=100
Change-Id: I6f43ea3b18330ea074f9edaf97cda51cd00ab508
Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64110
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>